--- a/Dockerfile.apache
+++ b/Dockerfile.apache
@@ -1,9 +1,4 @@
-#
-# NOTE: FILE GENERATED VIA "update.sh"
-#
-# PLEASE DO NOT EDIT IT DIRECTLY
-#
-FROM php:7.0-apache-jessie
+FROM php:%%DOCKER_FROM_TAG%%
 MAINTAINER Paweł Tomulik <ptomulik@meil.pw.edu.pl>
 
 RUN apt-get update && \
