--- a/Dockerfile.apache
+++ b/Dockerfile.apache
@@ -17,6 +17,7 @@ RUN apt-get update && \
 ENV APACHE_DOCUMENT_ROOT /var/www/html
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf && \
     sed -ri -e 's!/var/www/!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/apache2.conf /etc/apache2/conf-available/*.conf && \
+    sed -ri -e 's!^\s*(</VirtualHost>)\s*$!\tAllowEncodedSlashes NoDecode\n\1!' /etc/apache2/sites-available/*.conf && \
     a2enmod rewrite
 
 # vim: set ft=dockerfile:
