--- a/7.1/jessie/cli/Dockerfile
+++ b/7.1/jessie/cli/Dockerfile
@@ -12,6 +12,7 @@ RUN apt-get update && \
       libsasl2-dev && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
+    curl -L https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && \
     curl -L https://github.com/jwilder/dockerize/releases/download/v0.6.0/dockerize-linux-amd64-v0.6.0.tar.gz \
          --output /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
     tar -C /usr/local/bin -zxvf /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
