--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -3,6 +3,7 @@ MAINTAINER Paweł Tomulik <ptomulik@meil.pw.edu.pl>
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
+      unzip \
       libldap2-dev \
       libsasl2-dev && \
     apt-get clean && \
@@ -13,6 +14,14 @@ RUN apt-get update && \
     tar -C /usr/local/bin -zxvf /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
     rm -f /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
     docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu --with-ldap-sasl && \
-    docker-php-ext-install ldap
+    docker-php-ext-install ldap && \
+    groupadd -g 1000 php && \
+    useradd -m -g php --uid 1000 php
+
+VOLUME /home/php/project
+
+USER php
+
+WORKDIR /home/php/project
 
 # vim: set ft=dockerfile:
