--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -1,5 +1,25 @@
-FROM php:%%DOCKER_FROM_TAG%%
-MAINTAINER Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+@GENERATED_WARNING@
+
+FROM php:@DOCKER_FROM_TAG@
+MAINTAINER Paweł Tomulik <ptomulik@@meil.pw.edu.pl>
+
+@DOCKER_PHP_ARGS@
+
+ARG BUILD_DATE
+ARG VCS_REF
+ARG VERSION
+
+LABEL org.label-schema.build-date="${BUILD_DATE}" \
+      org.label-schema.name="Docker PHP Image" \
+      org.label-schema.description="Docker image with PHP CLI for Korowai project." \
+      org.label-schema.vcs-ref="${VCS_REF}" \
+      org.label-schema.vcs-url="https://github.com/korowai/docker-php" \
+      org.label-schema.vendor="Paweł Tomulik" \
+      org.label-schema.version="${VERSION}" \
+      org.label-schema.schema-version="1.0"
+
+
+@DOCKER_PHP_ENV@
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -15,8 +35,8 @@ RUN apt-get update && \
     rm -f /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
     docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu --with-ldap-sasl && \
     docker-php-ext-install ldap && \
-    groupadd -g 1000 php && \
-    useradd -m -g php --uid 1000 php
+    groupadd -g $PHP_GID php && \
+    useradd -m -g php --uid $PHP_UID php
 
 VOLUME /home/php/project
 
