--- a/Dockerfile.apache
+++ b/Dockerfile.apache
@@ -1,5 +1,25 @@
-FROM php:%%DOCKER_FROM_TAG%%
-MAINTAINER Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+@GENERATED_WARNING@
+
+FROM php:@DOCKER_FROM_TAG@
+MAINTAINER Paweł Tomulik <ptomulik@@meil.pw.edu.pl>
+
+@DOCKER_PHP_ARGS@
+
+ARG BUILD_DATE
+ARG VCS_REF
+ARG VERSION
+
+LABEL org.label-schema.build-date="${BUILD_DATE}" \
+      org.label-schema.name="Docker PHP+Apache Image" \
+      org.label-schema.description="Docker image with PHP and Apache for Korowai project." \
+      org.label-schema.vcs-ref="${VCS_REF}" \
+      org.label-schema.vcs-url="https://github.com/korowai/docker-php" \
+      org.label-schema.vendor="Paweł Tomulik" \
+      org.label-schema.version="${VERSION}" \
+      org.label-schema.schema-version="1.0"
+
+
+@DOCKER_PHP_ENV@
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
