--- a/7.1/jessie/cli/hooks/build
+++ b/7.1/jessie/cli/hooks/build
@@ -7,7 +7,9 @@
 
 # $IMAGE_NAME var is injected into the build so the tag is correct
 
+TFLAGS=`echo $DOCKER_TAG | sed -e "s#\\s*\\(^\\|,\\)\\s*# -t $DOCKER_REPO:#g"`
 docker build --build-arg VCS_REF=`git rev-parse --short HEAD` \
              --build-arg BUILD_DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"` \
              --build-arg VERSION="0.2.2" \
-             -t $IMAGE_NAME .
+             $TFLAGS \
+             .
