--- a/.circleci/upload.in
+++ b/.circleci/upload.in
@@ -5,7 +5,7 @@ if [ "$DOCKER_SKIP_UPLOAD" = "true" ]; then
   exit 0;
 fi
 
-if ! git tag --points-at HEAD | grep -qFw '^@VERSION@$'; then
+if ! git tag --points-at HEAD | grep -qFw '@VERSION@'; then
   echo 'skipping docker upload (HEAD is not tagged as "@VERSION@")'
   exit 0;
 fi
