--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ build_steps: &build_steps
     - checkout
     - run:
         name: Check if our source tree is in sync
-        command: sh .circleci/check-source-updated
+        command: .circleci/check-source-updated
 
     - setup_remote_docker
 
