--- a/Dockerfile.cli
+++ b/Dockerfile.cli
@@ -25,14 +25,15 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
       unzip \
       libldap2-dev \
-      libsasl2-dev && \
+      libsasl2-dev \
+      ldap-utils && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     curl -L https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && \
-    curl -L https://github.com/jwilder/dockerize/releases/download/v0.6.0/dockerize-linux-amd64-v0.6.0.tar.gz \
-         --output /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
-    tar -C /usr/local/bin -zxvf /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
-    rm -f /tmp/dockerize-linux-amd64-v0.6.0.tar.gz && \
+    curl -L https://github.com/jwilder/dockerize/releases/download/v0.6.1/dockerize-linux-amd64-v0.6.1.tar.gz \
+         --output /tmp/dockerize-linux-amd64-v0.6.1.tar.gz && \
+    tar -C /usr/local/bin -zxvf /tmp/dockerize-linux-amd64-v0.6.1.tar.gz && \
+    rm -f /tmp/dockerize-linux-amd64-v0.6.1.tar.gz && \
     docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu --with-ldap-sasl && \
     docker-php-ext-install ldap
 
